<resources>
    <string name="app_name">Organizze</string>
    <string name="title_intro_1">Organize your accounts \nfrom anywhere</string>
    <string name="description_intro_1">Simple and easy-to-use</string>

    <string name="title_intro_2">Know where your money is going</string>
    <string name="description_intro_2">Categorizing your expenses and \nseeing where every penny goes</string>

    <string name="title_intro_3">Never forget to pay a bill again!</string>
    <string name="description_intro_3">Receive alerts whenever you want</string>

    <string name="title_intro_4">Everything organized on \nyour phone or computer</string>
    <string name="description_intro_4">Use it on your smartphone or by \naccessing our website</string>

    <string name="title_intro_5">Create your account for free</string>
    <string name="description_intro_5">Join over 500 million people  and start now</string>

    <string name="sign_up_button">Sign up</string>
    <string name="log_in_button">Login</string>

    <string name="already_registered_button">I already have an account</string>

    <string name="title_create_account">Create your account for free</string>
    <string name="title_login_account">Log into your account</string>

    <string name="terms_of_use">Terms of use</string>
    <string name="fill_password">Password</string>
    <string name="fill_email">Email</string>
    <string name="fill_name">Name</string>

    <string name="title_activity_principal">Principal Activity</string>
    <string name="expense_value">US$ 0.00</string>
    <string name="income_value">US$ 0.00</string>
    <string name="data_hint">Ex: 4/30/2022</string>
    <string name="transaction_name_hint">Ex: Salary</string>
    <string name="description_hint">Ex: Monthly salary</string>

</resources>
